--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -2,11 +2,8 @@
   "name": "front-end",
   "version": "0.0.0",
   "scripts": {
-    "postinstall": "npm install -g @angular/cli",
-    "start": "ng serve --host 0.0.0.0 --port 80",
-    "build": "ng build --configuration production",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "build": "npm run build:angular",
+    "build:angular": "ng build --configuration production"
   },
   "private": true,
   "dependencies": {
