--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -2,8 +2,10 @@
   "name": "front-end",
   "version": "0.0.0",
   "scripts": {
-    "build": "npm run build:angular",
-    "build:angular": "ng build --configuration production"
+    "build": "ng build --configuration production",
+    "start": "ng serve --host 0.0.0.0 --port 80",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
