--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,5 @@ djangorestframework==3.15.2
 pillow==11.1.0
 sqlparse==0.5.3
 gunicorn==23.0.0
-whitenoise==6.9.0
-psycopg2>=2.9.10
+psycopg2==2.9.10
+dfango-environ==0.12.0
