excel読み込みテスト

--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -20,9 +20,11 @@
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
     "chart.js": "^3.9.1",
+    "file-saver": "^2.0.5",
     "ng2-charts": "^4.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
